--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  
+
+  
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+
+  
+    "proxy": "http://localhost:8080"
+  
+
+
 }
